# sf-visuals

./: .gitignore  README.md  app.py  pyproject.toml
dash_data/: ms_dermoscopyall_run_1confidnet_mcdbrighter_1.csv  ms_dermoscopyall_run_1confidnet_mcdiid.csv
outputs/ms_dermoscopyall_run_1/confidnet_mcd/brighter_1/: dataframe.csv
outputs/ms_dermoscopyall_run_1/confidnet_mcd/iid/: dataframe.csv
sf_visuals/: analyser.py  app.py  main.py
sf_visuals/assets/: style.css
sf_visuals/utils/: utils.py
visualfailureanalysis/: analyser.py  example.py  usecase.py
