[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-visuals"
dynamic = ["version"]
requires-python = ">=3.9"
description = "Toolkit to visualize the reasoning of image classification networks."
authors = [
    { name = "Levin Kobelke", email = "levin-kobelke@t-online.de" },
    { name = "Till Bungert", email = "till.bungert@dkfz.de" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "dash>=2.7.0",
    "matplotlib>=3.6.2",
    "numpy>=1.23.5",
    "Pillow",
    "pandas>=1.5.2",
    "plotly>=5.11.0",
    "scikit-learn",
    "scipy>=1.9.3",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "ipywidgets",
    "pylint",
    "black",
    "debugpy",
    "isort",
    "pre-commit",
]

[project.scripts]
sf-visuals = "sf_visuals.app:main"

[tool.setuptools_scm]
write_to = "sf_visuals/_version.py"

[tool.setuptools.packages]
find = {}

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
exclude = '''

(
  /(
      \.git
    | \.venv
    | _build
  )/
)
'''
