[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-visuals"
dynamic = ["version"]
requires-python = ">=3.9"
description = "Toolkit to visualize the reasoning of image classification networks."
authors = [
    { name = "Levin Kobelke", email = "levin-kobelke@t-online.de" },
    { name = "Till Bungert", email = "till.bungert@dkfz.de" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "dash>=2.7.0",
    "dash-daq",
    "loguru",
    "matplotlib>=3.6.2",
    "numpy>=1.23.5",
    "pandas>=1.5.2",
    "Pillow",
    "plotly>=5.11.0",
    "scikit-learn",
    "scipy>=1.9.3",
    "fd-shifts @ git+https://github.com/iml-dkfz/fd-shifts.git",
    "yaml",
]
[project.optional-dependencies]
dev = [
    "black",
    "debugpy",
    "ipython",
    "ipywidgets",
    "isort",
    "pre-commit",
    "ruff",
    "pytest",
]

[project.scripts]
sf-visuals = "sf_visuals.app:main"

[tool.setuptools_scm]
write_to = "sf_visuals/_version.py"

[tool.setuptools.packages]
find = {}

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
exclude = '''

(
  /(
      \.git
    | \.venv
    | _build
  )/
)
'''

[tool.ruff]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    # "C90", # mccabe
    "D",   # pydocstyle errors
    "E",   # pycodestyle
    "F",   # pyflakes
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "RUF", # ruff
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "W",   # pycodestyle warnings
]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"
